log/build_2022-05-13_17-30-30/py_image_save/stdout_stderr.log
running egg_info
creating ../../build/py_image_save/py_image_save.egg-info
writing ../../build/py_image_save/py_image_save.egg-info/PKG-INFO
writing dependency_links to ../../build/py_image_save/py_image_save.egg-info/dependency_links.txt
writing entry points to ../../build/py_image_save/py_image_save.egg-info/entry_points.txt
writing requirements to ../../build/py_image_save/py_image_save.egg-info/requires.txt
writing top-level names to ../../build/py_image_save/py_image_save.egg-info/top_level.txt
writing manifest file '../../build/py_image_save/py_image_save.egg-info/SOURCES.txt'
reading manifest file '../../build/py_image_save/py_image_save.egg-info/SOURCES.txt'
writing manifest file '../../build/py_image_save/py_image_save.egg-info/SOURCES.txt'
running build
running build_py
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib/py_image_save
copying py_image_save/__init__.py -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib/py_image_save
copying py_image_save/image_save.py -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib/py_image_save
running install
running install_lib
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save
copying /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib/py_image_save/__init__.py -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save
copying /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/build/lib/py_image_save/image_save.py -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save
byte-compiling /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save/__init__.py to __init__.cpython-38.pyc
byte-compiling /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save/image_save.py to image_save.cpython-38.pyc
  File "/media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save/image_save.py", line 37
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(e)?

running install_data
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/share/ament_index
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/share/ament_index/resource_index
creating /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/share/ament_index/resource_index/packages
copying resource/py_image_save -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/share/ament_index/resource_index/packages
copying package.xml -> /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/share/py_image_save
running install_egg_info
Copying ../../build/py_image_save/py_image_save.egg-info to /media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/install/py_image_save/lib/python3.8/site-packages/py_image_save-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/media/wy/7089b057-a6d2-459b-a158-eae994447d5b/MA/ros2_ws/build/py_image_save/install.log'
